# llmOffline

./: .gitignore  LICENSE  README.md  cli.py  models_map.json  prompts.json  pyproject.toml  settings.json  start.py
config/: __init__.py  schemas.py  settings.py
core/: __init__.py  functions.py  main.py  prompt_manager.py
tests/: test_core_base.py
